2009-02-24  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Anders Carlsson

        https://bugs.webkit.org/show_bug.cgi?id=15081

        Make display:none work for applet, emebed and object elements
        by calling rendererIsNeeded() on superclasses.

        Tests: fast/replaced/applet-display-none.html
               fast/replaced/embed-display-none.html
               fast/replaced/object-display-none.html

        * html/HTMLAppletElement.cpp:
        (WebCore::HTMLAppletElement::rendererIsNeeded):
        * html/HTMLElement.cpp:
        (WebCore::HTMLElement::rendererIsNeeded):
        * html/HTMLEmbedElement.cpp:
        (WebCore::HTMLEmbedElement::rendererIsNeeded):
        * html/HTMLObjectElement.cpp:
        (WebCore::HTMLObjectElement::rendererIsNeeded):

Canonical link: https://commits.webkit.org/33284@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41209 268f45cc-cd09-0410-ab3c-d52691b4dbfc